--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,8 @@ jobs:
         uses: actions/checkout@master
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Save tag name
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
@@ -128,4 +130,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: helpmefindaname/ner-eval-dashboard:${GITHUB_REF#refs/tags/}
+          tags: helpmefindaname/ner-eval-dashboard:${{ env.RELEASE_VERSION }}
