--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Install pypa/build
         run: pip install build --user
       - name: Build a binary wheel and a source tarball
-        run: python -m build --sdist --wheel -outdir dist/
+        run: python -m build --sdist --wheel --outdir dist/
       - name: Publish distribution 📦 to PyPI
         if: ${{env.is_package}}
         uses: pypa/gh-action-pypi-publish@release/v1
