--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
     needs: [test, test-docker]
     if: startsWith(github.ref, 'refs/tags')
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       - name: Set up Python 3.10
         uses: actions/setup-python@v2
         with:
@@ -114,7 +114,7 @@ jobs:
     if: needs.prep-vars.outputs.publish_docker && startsWith(github.ref, 'refs/tags')
     steps:
       - name: Checkout code
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Save tag name
