--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ filterwarnings = [
 [tool.mypy]
 ignore_missing_imports = true
 disallow_untyped_calls = true
+disallow_untyped_defs = true
 warn_unused_ignores = true
 warn_no_return = true
 
