--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ flake8-ignore = ["E203", "W503"]  # See https://github.com/PyCQA/pycodestyle/iss
 addopts = "--flake8 --mypy --isort -n auto"
 filterwarnings = [
     "error",
-    "ignore:SelectableGroups dict interface is deprecated. Use select."
+    "ignore:Please use `triu` from the `scipy:DeprecationWarning",
 ]  # Convert all warnings to errors, imo warnings that are not treated as errors will be ignored by most people.
 # My approach is to throw an error and let the programmar check if the error is intended (then add it to the filterwarnings) or not (then fix it!)
 
