--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ filterwarnings = [
     "error",
     "ignore:Please use `triu` from the `scipy:DeprecationWarning",  # gensim needs an update
     "ignore:`cached_download`",  # flair 0.12+ should solve this.
+    "ignore:SelectableGroups dict interface is deprecated. Use select.",  # deprecations on python 3.10
 ]  # Convert all warnings to errors, imo warnings that are not treated as errors will be ignored by most people.
 # My approach is to throw an error and let the programmar check if the error is intended (then add it to the filterwarnings) or not (then fix it!)
 
