--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
         uses: actions/checkout@v2
       - id: set-vars
         run: |
-          echo ::set-output name=matrix::{\"python-version\":${{ env.is_package && '[ \"3.7\", \"3.8\", \"3.9\", \"3.10\" ]' || '[ \"3.10\" ]' }} }
+          echo ::set-output name=matrix::{\"python-version\":${{ env.is_package && '[ \"3.8\", \"3.9\", \"3.10\" ]' || '[ \"3.10\" ]' }} }
           echo ::set-output name=publish_docker::${{env.publish_docker}}
   test:
     runs-on: ubuntu-latest
