--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ disallow_untyped_calls = true
 disallow_untyped_defs = true
 warn_unused_ignores = true
 warn_no_return = true
+testpaths = ["ner_eval_dashboard", "tests"]
 
 [tool.isort]
 profile = "black"
