--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ filterwarnings = [
     "ignore:`cached_download`",  # flair 0.12+ should solve this.
     "ignore:SelectableGroups dict interface is deprecated. Use select.",  # deprecations on python 3.10
     "ignore:The distutils package is deprecated and slated for removal in Python 3.12.:DeprecationWarning",  # deprecations on python 3.10
+    "ignore:The multilingual functions are not available with this Wordnet version:UserWarning",  # textflint is not that multilingual
 ]  # Convert all warnings to errors, imo warnings that are not treated as errors will be ignored by most people.
 # My approach is to throw an error and let the programmar check if the error is intended (then add it to the filterwarnings) or not (then fix it!)
 
