--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pydantic
 dash
 dash_bootstrap_components
 loguru
-explainaboard<0.9.2
+datalabs<0.3.11
 datasets>=2.13.0
 gevent
 checklist @ git+https://github.com/helpmefindaname/checklist.git@master
