--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,45 +60,45 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Install poetry
+        run: pipx install poetry
       - name: setup python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
-          cache-dependency-path: '**/requirements*.txt'
-      - name: Install dependencies
-        run: pip install --upgrade -r requirements.txt
-      - name: Install dev dependencies
-        run: pip install --upgrade -r requirements-dev.txt
-      - name: Install package
-        run: pip install -e . --no-deps
-      - name: show dependencies
-        run: pip freeze
+          cache: 'poetry'
+      - name: Install Dependencies
+        run: poetry install
       - name: download nltk
-        run: python -c 'import nltk;nltk.download("punkt")'
-      - name: Run tests including flake8 and mypy, etc.
-        run: pytest -vv
+        run: poetry run python -c 'import nltk;nltk.download("punkt")'
+      - name: Run tests
+        run: poetry run pytest -vv
   build-n-publish:
     name: Build and publish Python 🐍 distributions 📦 to PyPI
     runs-on: ubuntu-latest
     needs: [test, test-docker]
     if: startsWith(github.ref, 'refs/tags')
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Install poetry
+        run: pipx install poetry
+      - name: setup python ${{ env.python-version }}
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-      - name: Install pypa/build
-        run: pip install build --user
+          python-version: ${{ env.python-version }}
+          cache: 'poetry'
+      - name: Install Dependencies
+        run: poetry install
+      - name: Set the right version
+        run: poetry version ${{  github.ref_name }}
       - name: Build a binary wheel and a source tarball
-        run: python -m build --sdist --wheel --outdir dist/
-      - name: Publish distribution 📦 to PyPI
+        run: poetry build
+      - name: Publish
         if: ${{env.is_package}}
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
+          poetry publish --build
   publish-docker:
     name: Publish docker file and push it to a registry
     runs-on: ubuntu-latest
@@ -132,3 +132,5 @@ jobs:
           tags: |
             helpmefindaname/ner-eval-dashboard:${{ env.RELEASE_VERSION }}
             helpmefindaname/ner-eval-dashboard:latest
+          build-args: |
+            BUILD_VERSION=${{ env.RELEASE_VERSION }}
