--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ explainaboard = "^0.9"
 datasets = "^2.13.0"
 checklist = { git = "https://github.com/helpmefindaname/checklist.git", branch = "master" }
 datalabs = "<0.3.11"
+torch = "!=2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
