--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,9 +103,7 @@ jobs:
         run: poetry build
       - name: Publish
         if: ${{env.is_package}}
-        run: |
-          poetry config pypi-token.pypi ${{ secrets.PYPI_API_TOKEN }}
-          poetry publish --build
+        run: poetry publish -u __token__ -p ${{ secrets.PYPI_TOKEN }} -vv
   publish-docker:
     name: Publish docker file and push it to a registry
     runs-on: ubuntu-latest
